# DocMind

./: .gitignore  README.md  final_review_gate.py  main.py  pyproject.toml
.cursor/rules/: python.mdc
docmind/: __init__.py
docmind/api/: __init__.py  dependencies.py  exceptions.py  middleware.py
docmind/api/controllers/: document_controller.py  rag_controller.py  search_controller.py
docmind/api/routers/: chats.py  documents.py  rag.py  search.py
docmind/config/: settings.py
docmind/core/: exceptions.py  vector_store.py
docmind/core/prompts/: rag_prompts.py
docmind/core/repositories/: __init__.py  chat_repository.py  document_repository.py
docmind/core/services/: __init__.py  chat_service.py  document_service.py  embedding_service.py  rag_service.py
docmind/core/text_processing/: __init__.py  chunking.py  cleaning.py  embedding.py  ingestion.py
docmind/core/vector_store/: __init__.py  qdrant_store.py
docmind/models/: database.py  schemas.py
docmind/scripts/: init_db.py  recreate_tables.py
docs/: CHUNKING_FEATURE.md  QDRANT_CLOUD_SETUP.md  TEXT_CLEANING_IMPROVEMENTS.md
scripts/: cleanup_system.py  manage_documents.py  migrate_to_chat_sessions.py  test_deletion.py
static/: app.js  chat.css  chat.html
